# mlevaluateimages

./: .gitignore  README.md  local_runner.py  pyproject.toml
pipeline/: configs.py  ingestion.py  pipeline.py
src/: ingestion.py  pipeline.py
