[tool.poetry]
name = "mlevaluateimages"
version = "1.0.0"
description = "Used to study MLE and the stages of MLE by building a pipeline for training a model that will be able to predict whether an image would be wanted by myself or not."
authors = ["Jesse <sora4222@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.15"
tfx = "^1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
